--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="鍍膜液、清潔、鍍膜相關、鍍膜">
+    <meta name="descriptioin" content="CERALIV:鍍膜液、清潔、鍍膜相關、鍍膜">
     <title>Document</title>
 </head>
 <body>
@@ -20,7 +22,30 @@
         <p>*優惠不適用於體驗組及擦拭布，敬請見諒</p>
         <p>祝 日日美好</p>
         <p>CERALIV CASA</p>
-        <p><br></p>
+        <p><br>
+        <table>
+            <tr>
+                <th> 姓名 </th>
+                <th> email </th>
+                <th> phone </th>
+            </tr>
+             <tr>
+                <td> bo </td>
+                <td> 123@gmail </td>
+                <td> 12345678 </td>
+            </tr>
+            <tr>
+                <td> sp </td>
+                <td> 789@gmail </td>
+                <td> sssss </td>
+            </tr>
+            <tr>
+                <td> tb </td>
+                <td> tyu@gmail </td>
+                <td> s3467 </td>
+            </tr>
+        </table></p>
+
     </h1>
     <!-- <script>
     debugger
