--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        CERALIV
+    </header>
+    <nav>
+        <ul>
+            <li>
+                MENU
+                <ul>
+                    <li>blog</li>
+                    <li>contact</li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
+    <main>
+        <article>
+            <section>
     <h1>
         <p>您好，很榮幸在眾多鍍膜品牌中您選擇了CERALIV，希望這段時間CERALIV已為您</p>
         <p>帶來更便利自在的清潔體驗！</p>
@@ -47,6 +64,15 @@
         </table></p>
 
     </h1>
+    </section>
+    </article>
+    <aside>
+        aside
+    </aside>
+    </main>
+    <footer>
+        footer    
+    </footer>
     <!-- <script>
     debugger
     var i = 1
