--- a/index.html
+++ b/index.html
@@ -7,6 +7,35 @@
     <meta name="keywords" content="鍍膜液、清潔、鍍膜相關、鍍膜">
     <meta name="descriptioin" content="CERALIV:鍍膜液、清潔、鍍膜相關、鍍膜">
     <title>Document</title>
+    <style>
+        header,nav{
+            height: 80px;
+            background: rgb(134, 91, 122);
+            margin: 0;
+            border: 0;
+        }
+        main{
+            display: flex;
+            flex-direction: row;
+            margin-right: 0px;
+        }
+        article{
+            background: rgb(134, 93, 50);
+            width: 70%;
+        }
+        aside{
+            margin-left: 50px;
+            margin-right: 0px;
+            background: rgb(254, 30, 50);
+            width: 25%;
+            margin: (0px, 10px, 20px, 0px);
+        }
+        footer{
+            height: 50px;
+            background-color:aqua;
+        }
+    </style>
+    <link rel="stylesheet" type="text/css">
 </head>
 <body>
     <header>
