--- a/index.html
+++ b/index.html
@@ -40,13 +40,15 @@
         <h1 class="text-center mt-3">表單</h1>
 
         <form
-            action="https://script.google.com/macros/s/AKfycbwtDqZiw3RSzAksn5TaFedWu_V0GGa51UrDXk9UVswEBCg_9bF18Hc9M0uuNxsxNpZg/exec"
+            action="https://script.google.com/macros/s/AKfycbyToTb0PKADNwiVNa7Z01pf0fX7zkbmcqfKhAM1vIvPWYY7uynOUs_3rp2c_Pr6Mdw8/exec"
             method="post" id="myForm">
             <div class="row" id="form_item">
             </div>
 
             <!-- 隱藏-->
-            <input type="hidden" name='op' value='set_sheet' class="form-control" id="op">
+            <input type="hidden" name='op' value='set_sheet' id="op">
+
+            <input type="hidden" name='callback_url' value='' id="callback_url">
 
             <button type="submit" class="btn btn-primary w-100" id="submit">送出</button>
 
@@ -56,6 +58,10 @@
 
     <script>
         window.onload = function () {
+            // let url = window.location.href;
+            let callback_url = document.getElementById('callback_url');
+            callback_url.value = window.location.href;
+
             let submitBtn = document.getElementById('submit');
             submitBtn.onclick = function () {//監聽 submit
 
